GEODE-8704: many CI failures in Jetty9CachingClientServerTest (#5754)
(cherry picked from commit 9a2c0d4c0ce63de678f6921e64b1444ddfc76c52)